--- a/production/modules/ntp/templates/ntp.conf.erb
+++ b/production/modules/ntp/templates/ntp.conf.erb
@@ -15,13 +15,13 @@ filegen clockstats file clockstats type day enable
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
-pool 0.ubuntu.pool.ntp.org iburst
-pool 1.ubuntu.pool.ntp.org iburst
-pool 2.ubuntu.pool.ntp.org iburst
-pool 3.ubuntu.pool.ntp.org iburst
-
-# Use Ubuntu's ntp server as a fallback.
-pool ntp.ubuntu.com
+# pool 0.ubuntu.pool.ntp.org iburst
+# pool 1.ubuntu.pool.ntp.org iburst
+# pool 2.ubuntu.pool.ntp.org iburst
+# pool 3.ubuntu.pool.ntp.org iburst
+# 
+# # Use Ubuntu's ntp server as a fallback.
+# pool ntp.ubuntu.com
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
 # details.  The web page <http://support.ntp.org/bin/view/Support/AccessRestrictions>
@@ -71,5 +71,4 @@ server 0.fr.pool.ntp.org
 server 1.fr.pool.ntp.org
 server 2.fr.pool.ntp.org
 server 3.fr.pool.ntp.org
-
 
